# local-ai-chat

./: .gitignore  CHANGELOG.md  DEVLOG.md  README.md  build.ps1  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/core/: __init__.py  context_manager.py  foundry_cli.py  gpu_monitor.py  storage.py  token_tracker.py  tokens.py
src/gui/: __init__.py  app.py  chat_widgets.py  settings.py  settings_dialog.py  styles.py  theme.json  ui.py
tests/: common.py  run_all_tests.py  test_config.py
tests/context_retention/: test_context_retention.py
tests/memory_usage/: test_memory_usage.py
tests/response_performance/: test_response_performance.py
