[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-chat"
version = "0.2.1"
description = "PySide6 desktop app for managing and chatting with Foundry Local models"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Benjamin Dourthe", email = "benjamin@adonamed.com" }
]
license = { text = "MIT" }
keywords = ["foundry", "local", "chat", "PySide6", "desktop"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Framework :: Qt :: PySide6",
]

dependencies = [
  "PySide6>=6.6",
]

[project.optional-dependencies]
# Tools and legacy/UI extras not strictly required at runtime
dev = ["pyinstaller>=6.5"]
legacy_tk = ["ttkbootstrap>=1.10.1"]

[project.scripts]
local-ai-chat = "main:run_app"

[tool.setuptools]
include-package-data = true
py-modules = ["main"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

# main.py is a top-level module under src/
